# hass-proxy

./: .env  Cargo.toml  LICENSE  README.md
.github/workflows/: pull_request.yml
frontend/: package-lock.json  package.json
frontend/src/lib/components/: Chart.svelte
frontend/src/lib/models/: Entity.ts
frontend/src/routes/entities/: +page.svelte  +page.ts
frontend/src/routes/entity/[area]/[entity_id]/: +page.svelte  +page.ts
migrations/: 20240226225950_add_entries.sql
scripts/: prepopulate_database.ps1  prepopulate_database.sh
src/: config.rs  error.rs  main.rs
src/database/: mod.rs
src/routes/: entry.rs  mod.rs
