[package]
name = "hass-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Yannick Wegel <dev@pizzaboi.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"

dotenvy = "0.15.7"
envy = "0.4.2"
